--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,64 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  font-family: 'Poppins', sans-serif;
+}
+body {
+  background-color: #152547;
+  color: #fff;
+}
+
+.information-small {
+  font-size: 10px;
+  color: rgb(207, 203, 203);
+}
+
+.title {
+  border-bottom: 1px solid #fff;
+  width: 100%;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 12px; // espaço entre os campos
+  max-width: 400px;
+  margin: 20px auto; // centraliza o form
+
+  label {
+    font-weight: 600;
+    margin-bottom: 4px;
+  }
+
+  input {
+    padding: 8px 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 14px;
+    transition: border-color 0.2s, box-shadow 0.2s;
+
+    &:focus {
+      outline: none;
+      border-color: #3b82f6; // azul claro
+      box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.2);
+    }
+
+    &::placeholder {
+      color: #aaa;
+      font-style: italic;
+    }
+  }
+
+  button {
+    padding: 10px 15px;
+    background-color: #3b82f6;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background-color 0.2s;
+
+    &:hover {
+      background-color: #2563eb;
+    }
+  }
+}
