Realizando conexão a instancia e gerando novo qrcode.

--- a/src/app/views/conexao/conexao.component.html
+++ b/src/app/views/conexao/conexao.component.html
@@ -20,7 +20,7 @@
     Criar Instância
   </button>
 
-  <button type="button" *ngIf="!qrCodeUrl && gerarNovoQrCode == true" (click)="conectar()">
+  <button type="button" *ngIf="!qrCodeUrl && gerarNovoQrCode == true" (click)="newQrCode()">
     Gerar novo QrCode
   </button>
 </form>
