--- a/src/app/views/core/conexao/conexao.component.html
+++ b/src/app/views/core/conexao/conexao.component.html
@@ -33,5 +33,7 @@
     >
       {{ isCreatingInstance ? 'Gerando...' : 'Gerar novo QR Code' }}
     </button>
+
+    <button type="button" (click)="statusInstance()">Verificar Status</button>
   </div>
 </form>
